[gd_scene load_steps=33 format=2]

[ext_resource path="res://PlayerCat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bed.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/room.png" type="Texture" id=3]
[ext_resource path="res://Human.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bars.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/furniture/desk.png" type="Texture" id=6]
[ext_resource path="res://textures/furniture/side table.png" type="Texture" id=7]
[ext_resource path="res://textures/furniture/sink.png" type="Texture" id=8]
[ext_resource path="res://textures/furniture/fridge 2.png" type="Texture" id=9]
[ext_resource path="res://textures/furniture/tv.png" type="Texture" id=10]
[ext_resource path="res://Couch.tscn" type="PackedScene" id=11]
[ext_resource path="res://textures/food.png" type="Texture" id=12]
[ext_resource path="res://HumanController.gd" type="Script" id=13]
[ext_resource path="res://LevelConroller.gd" type="Script" id=14]
[ext_resource path="res://Human.gd" type="Script" id=15]
[ext_resource path="res://Food.gd" type="Script" id=16]
[ext_resource path="res://Bars.gd" type="Script" id=17]
[ext_resource path="res://textures/pixel button down.png" type="Texture" id=18]
[ext_resource path="res://textures/pixel button up.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 13 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 110, 57.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 5.5 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 5 )

[sub_resource type="CircleShape2D" id=12]
radius = 7.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 0.5
} ]

[node name="HumanController" type="Node2D"]
position = Vector2( -44, -21 )
script = ExtResource( 13 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="Room" type="Sprite" parent="Node2D"]
position = Vector2( 124, 94 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Node2D"]
position = Vector2( 141, 129 )
zoom = Vector2( 10, 10 )

[node name="Desk" type="StaticBody2D" parent="Node2D"]
position = Vector2( 180, 57 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Node2D/Desk"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Desk"]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="Wall" type="StaticBody2D" parent="Node2D"]
visible = false
position = Vector2( 174, 206 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Wall"]
visible = false
position = Vector2( -35, 9.5 )
shape = SubResource( 8 )

[node name="Sink" type="StaticBody2D" parent="Node2D"]
position = Vector2( 68, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Node2D/Sink"]
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sink"]
shape = SubResource( 2 )

[node name="Fridge" type="StaticBody2D" parent="Node2D"]
position = Vector2( 92, 56 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Fridge"]
position = Vector2( 0, 6.5 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/Fridge"]
frames = SubResource( 15 )

[node name="Bed" parent="Node2D" instance=ExtResource( 2 )]
position = Vector2( 179, 141 )

[node name="Table" type="StaticBody2D" parent="Node2D"]
position = Vector2( 155, 128 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Node2D/Table"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Table"]
position = Vector2( 0, 2 )
shape = SubResource( 7 )

[node name="TV" type="StaticBody2D" parent="Node2D"]
position = Vector2( 68, 142 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Node2D/TV"]
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/TV"]
position = Vector2( 0, 11 )
shape = SubResource( 6 )

[node name="Couch" parent="Node2D" instance=ExtResource( 11 )]
position = Vector2( 69, 113 )

[node name="PlayerCat" parent="Node2D" instance=ExtResource( 1 )]
position = Vector2( 134, 143 )
collision_mask = 3

[node name="DebugLabel" type="Label" parent="Node2D"]
margin_left = 45.0
margin_top = 168.0
margin_right = 86.0
margin_bottom = 182.0
text = "Debug"

[node name="Bars" parent="Node2D" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 21.0
margin_right = 44.0
margin_bottom = 21.0
script = ExtResource( 17 )

[node name="Food" type="Area2D" parent="Node2D"]
position = Vector2( 60, 75 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Food"]
shape = SubResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/Food"]
position = Vector2( 0, -3 )
frames = SubResource( 11 )

[node name="Human" type="Node2D" parent="Node2D"]
script = ExtResource( 15 )

[node name="Schedule" type="Timer" parent="Node2D/Human"]
wait_time = 5.0
autostart = true

[node name="Fridge" type="Position2D" parent="Node2D/Human"]
position = Vector2( 69, 76 )

[node name="Couch" type="Position2D" parent="Node2D/Human"]
position = Vector2( 69, 125 )

[node name="Desk" type="Position2D" parent="Node2D/Human"]
position = Vector2( 180, 74 )

[node name="Bed" type="Position2D" parent="Node2D/Human"]
position = Vector2( 180, 147 )

[node name="Body" parent="Node2D/Human" instance=ExtResource( 4 )]
position = Vector2( 121, 111 )

[node name="Buttons" type="Position2D" parent="Node2D"]
position = Vector2( 44, 167 )

[node name="Up" type="Button" parent="Node2D/Buttons"]
margin_left = 99.0
margin_top = -1.0
margin_right = 129.0
margin_bottom = 19.0
text = "Up"

[node name="Down" type="Button" parent="Node2D/Buttons"]
margin_left = 92.0
margin_top = 41.0
margin_right = 140.0
margin_bottom = 61.0
text = "Down"

[node name="Right" type="Button" parent="Node2D/Buttons"]
margin_left = 116.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 40.0
text = "Right"

[node name="Left" type="Button" parent="Node2D/Buttons"]
margin_left = 71.0
margin_top = 19.0
margin_right = 107.0
margin_bottom = 39.0
text = "Left"

[node name="Sleep" type="TextureButton" parent="Node2D/Buttons"]
margin_left = 6.0
margin_top = 21.0
margin_right = 46.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 19, 24 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )

[node name="Label" type="Label" parent="Node2D/Buttons/Sleep"]
margin_left = -2.0
margin_top = 31.0
margin_right = 38.0
margin_bottom = 45.0
text = "Sleep"

[node name="Jump" type="TextureButton" parent="Node2D/Buttons"]
margin_left = 51.0
margin_top = 57.0
margin_right = 91.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 19, 24 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )

[node name="Label" type="Label" parent="Node2D/Buttons/Jump"]
margin_left = -1.0
margin_top = 32.0
margin_right = 39.0
margin_bottom = 46.0
text = "Jump"

[connection signal="area_entered" from="Node2D/Food" to="Node2D/Food" method="_on_Food_area_entered"]
[connection signal="body_entered" from="Node2D/Food" to="Node2D" method="_on_Food_body_entered"]
[connection signal="timeout" from="Node2D/Human/Schedule" to="." method="_on_Schedule_timeout"]
[connection signal="timeout" from="Node2D/Human/Schedule" to="Node2D/Human" method="_on_Schedule_timeout"]
[connection signal="pressed" from="Node2D/Buttons/Sleep" to="Node2D" method="_on_Sleep_pressed"]
[connection signal="pressed" from="Node2D/Buttons/Jump" to="Node2D" method="_on_Jump_pressed"]
